syntax = "proto3";

package rpc;
option go_package="./rpc";

message UserGenTokenReq{
  //用户ID
  int64 user_id = 1;
  //有效期
  int32 second = 2;
}

message UserGenTokenRes{
  //用户ID
  int64 user_id = 1;
  //token
  string token = 2;
  string refresh_token = 3;
}

message UserAuthReq {
  string token = 1;
}

message UserAuthRes {
  int64 user_id = 1;
  string token = 2;
  string refresh_token = 3;
}


message AdminGenTokenReq{
  //用户ID
  int64 admin_id = 1;
  //有效期
  int32 second = 2;
}

message AdminGenTokenRes{
  //用户ID
  int64 admin_id = 1;
  //token
  string token = 2;
  string refresh_token = 3;
}

message AdminAuthReq {
  string token = 1;
}

message AdminAuthRes {
  int64 admin_id = 1;
  string token = 2;
  string refresh_token = 3;
}

message Response{
  int32 code = 1;
  string message = 2;
}

service Rpc {
  rpc UserGenToken(UserGenTokenReq) returns(UserGenTokenRes);
  rpc UserAuth(UserAuthReq) returns(UserAuthRes);
  rpc UserRemoveToken(UserAuthReq) returns(Response);

  rpc AdminGenToken(AdminGenTokenReq) returns(AdminGenTokenRes);
  rpc AdminAuth(AdminAuthReq) returns(AdminAuthRes);
  rpc AdminRemoveToken(AdminAuthReq) returns(Response);
}
